--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,22 @@
     text-align: justify;
 }
 
+.service-header {
+    text-align: center;
+    align-items: center;
+    height: 80px;
+    padding-left: .2rem;
+    padding-right: .2rem;
+}
+
+.responsive { 
+    display: block;
+    margin: 0 auto;
+    max-width: 100%; 
+    max-height: 150px; 
+    object-fit: contain;
+} 
+
 /**
  * Blog Home Feed
  */
