Adds cloudflare analytics for production site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,10 @@
         {{ content }}
       </div>
     </main>
+
+    {%- if jekyll.environment == 'production' -%}
+        {%- include cloudflare-analytics.html -%}
+    {%- endif -%}
   </body>
 
 </html>
