--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,5 +22,9 @@
         <script src="assets/js/vendor/shuffle.min.js"></script>
         <!-- Main Silicon Bootstrap Theme Script -->
         <script src="assets/js/theme.min.js"></script>
+
+        {%- if jekyll.environment == 'production' -%}
+            {%- include cloudflare-analytics.html -%}
+        {%- endif -%}
     </body>
 </html>
