--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
                             <ul class="nav flex-column pb-lg-1 mb-lg-3">
                                 <li class="nav-item"><a href="#" class="nav-link d-inline-block px-0 pt-1 pb-2">Home</a></li>
                                 <li class="nav-item"><a href="/blog" class="nav-link d-inline-block px-0 pt-1 pb-2">Blog</a></li>
+                                <li class="nav-item"><a href="/contact" class="nav-link d-inline-block px-0 pt-1 pb-2">Contact</a></li>
                             </ul>
                         </div>
                     </div>
