--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,9 @@
           <li class="nav-item">
             <a href="/blog" class="nav-link">Blog</a>
           </li>
+          <li class="nav-item">
+            <a href="/contact" class="nav-link">Contact</a>
+          </li>
         </ul>
       </div>     
     </div>
