Uses the silicon list theme with no sidebar for the blog home page - updates relative links to be full references

--- a/_includes/head-home.html
+++ b/_includes/head-home.html
@@ -10,11 +10,11 @@
 
     <!-- Vendor Styles -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" media="screen" href="assets/css/vendor/swiper-bundle.min.css">
-    <link rel="stylesheet" media="screen" href="assets/css/vendor/lightgallery-bundle.min.css">
+    <link rel="stylesheet" media="screen" href="/assets/css/vendor/swiper-bundle.min.css">
+    <link rel="stylesheet" media="screen" href="/assets/css/vendor/lightgallery-bundle.min.css">
 
     <!-- Main Theme Styles + Bootstrap -->
-    <link rel="stylesheet" media="screen" href="assets/css/theme.min.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
   
