--- a/_includes/head-landing.html
+++ b/_includes/head-landing.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Main Theme Styles + Bootstrap -->
-    <link rel="stylesheet" media="screen" href="assets/css/theme.min.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
   
