--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page if desired -->
 <header class="header navbar navbar-expand-lg position-absolute navbar-sticky">
   <div class="container px-3">
-    <a href="index.html" class="navbar-brand pe-3">
+    <a href="/" class="navbar-brand pe-3">
       <img src="/assets/img/duelfer-solutions-logo.svg" style="height:45px;" alt="Duelfer Solutions">
     </a>
     <div id="navbarNav" class="offcanvas offcanvas-end">
