--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -11,9 +11,9 @@
         {%- include footer.html -%}
 
         <!-- Helper for loading images -->
-        <script src="assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+        <script src="/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
         <!-- Main Silicon Bootstrap Theme Script -->
-        <script src="assets/js/theme.min.js"></script>
+        <script src="/assets/js/theme.min.js"></script>
 
         {%- if jekyll.environment == 'production' -%}
             {%- include cloudflare-analytics.html -%}
