First pass at Salesforce landing page for ads

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -10,8 +10,12 @@
 
         {%- include footer.html -%}
 
+        <!-- Allows swiping on widgets that are compressed on mobile and smaller screens -->
+        <script src="/assets/js/vendor/swiper-bundle.min.js"></script>
         <!-- Helper for loading images -->
         <script src="/assets/js/vendor/imagesloaded.pkgd.min.js"></script>
+        <!-- Horizontal off-screen rotation of items like certifications, brands, etc. -->
+        <script src="/assets/js/vendor/shuffle.min.js"></script>
         <!-- Main Silicon Bootstrap Theme Script -->
         <script src="/assets/js/theme.min.js"></script>
 
