--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,6 +16,7 @@
                         <div id="useful-links" class="collapse d-lg-block" data-bs-parent="#footer-links">
                             <ul class="nav flex-column pb-lg-1 mb-lg-3">
                                 <li class="nav-item"><a href="#" class="nav-link d-inline-block px-0 pt-1 pb-2">Home</a></li>
+                                <li class="nav-item"><a href="/salesforce-development" class="nav-link d-inline-block px-0 pt-1 pb-2">Salesforce Development</a></li>
                                 <li class="nav-item"><a href="/blog" class="nav-link d-inline-block px-0 pt-1 pb-2">Blog</a></li>
                                 <li class="nav-item"><a href="/contact" class="nav-link d-inline-block px-0 pt-1 pb-2">Contact</a></li>
                             </ul>
