--- a/_includes/head-landing.html
+++ b/_includes/head-landing.html
@@ -2,11 +2,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="{{page.keywords}}">
     {%- seo -%}
     {%- feed_meta -%}
 
     <!-- Vendor Styles -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" media="screen" href="/assets/css/vendor/swiper-bundle.min.css">
 
     <!-- Main Theme Styles + Bootstrap -->
     <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css">
