--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,6 +12,9 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
+            <a href="/salesforce-development" class="nav-link">Salesforce Development</a>
+          </li>
+          <li class="nav-item">
             <a href="/blog" class="nav-link">Blog</a>
           </li>
           <li class="nav-item">
